[package]
name = "libra-cached-packages"
description = "Builds framework packages for caching in builds and tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bcs = { workspace = true }
# Note the generated SDK code uses hard coded `diemtypes`
diem-types = { git = "https://github.com/davidrotari19/diem.git", rev = "0d6eaa6" }
# diem-types = repro_deserialize_missing_address
move-core-types = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
libra-framework = { workspace = true }
